# Kaggle

./: README.md
Predicting Loan Payback/: .gitignore  README.md  main.ipynb  pyproject.toml
Predicting Loan Payback/.ipynb_checkpoints/: main-checkpoint.ipynb
Predicting Loan Payback/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Predicting Loan Payback/catboost_info/learn/: events.out.tfevents
Predicting Loan Payback/loan_payback_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
