[project]
name = "loan-payback-prediction"
version = "0.1.0"
description = "Machine Learning project for predicting loan payback using Kaggle competition data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.35.1",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
]
